# TuringForge

./: CMakeCache.txt  CMakeLists.txt  TuringForge.cpp
apps/: CMakeLists.txt  main.cpp  options.hpp
cli/: CMakeLists.txt  operator_factory.cpp  operator_factory.hpp  turingforge_gp.cpp  turingforge_nsgp.cpp  turingforge_parse_model.cpp  util.cpp  util.hpp
cmake/: CPM.cmake  CompilerFlags.cmake  Coverage.cmake  Dependencies.cmake  DevMode.cmake  EVEConfig.cmake  EigenConfig.cmake  GetGitRevision.cmake  GetGitRevision.cmake.in  InstallConfig.cmake  InstallRules.cmake  JemallocConfig.cmake  Lint.cmake  LintTargets.cmake  MPIConfig.cmake  Packaging.cmake  Prelude.cmake  Spell.cmake  SpellTargets.cmake  TuringforgeConfig.cmake.in  Variables.cmake
data/: AirfoilSelfNoise.csv  Breiman-I.csv  Chemical-I.csv  Concrete.csv  Friedman-I.csv  Friedman-II.csv  Pagie-1.csv  Poly-10.csv  Vladislavleva-1.csv  Vladislavleva-2.csv  Vladislavleva-3.csv  Vladislavleva-4.csv  Vladislavleva-5.csv  Vladislavleva-6.csv  Vladislavleva-7.csv  Vladislavleva-8.csv  simple.csv
docs/: mainpage.md
example/: CMakeLists.txt  simple_gp.cpp
include/: CMakeLists.txt
include/ceres/: integer_sequence_algorithm.h  jet.h  jet_fwd.h  jet_traits.h  port.h  tiny_solver.h
include/csv/: parser.hpp
include/turing_forge/: config.hpp  utils.hpp
include/turing_forge/algorithms/: config.hpp  ga_base.hpp  gp.hpp  nsga2.hpp  solution_archive.hpp
include/turing_forge/collections/: projection.hpp
include/turing_forge/core/: comparison.hpp  concepts.hpp  constants.hpp  contracts.hpp  dataset.hpp  distance.hpp  expression.hpp  function.hpp  functions.hpp  individual.hpp  node.hpp  operator.hpp  options.hpp  population.hpp  primitive_set.hpp  problem.hpp  random.hpp  range.hpp  types.hpp  variable.hpp  version.hpp
include/turing_forge/error_metrics/: correlation_coefficient.hpp  error_metrics.hpp  mean_absolute_error.hpp  mean_squared_error.hpp  normalized_mean_squared_error.hpp  r2_score.hpp  root_mean_squared_error.hpp  sum_of_squared_errors.hpp
include/turing_forge/formatter/: formatter.hpp
include/turing_forge/hash/: hash.hpp  metrohash64.hpp
include/turing_forge/interpreter/: derivatives.hpp  dispatch_table.hpp  dual.hpp  functions.hpp  interpreter.hpp
include/turing_forge/interpreter/backend/: arma.hpp  backend.hpp  blaze.hpp  eigen.hpp  eve.hpp  fast_v1.hpp  fast_v2.hpp  fast_v3.hpp  fastor.hpp  plain.hpp  vdt.hpp
include/turing_forge/interpreter/backend/arma/: derivatives.hpp  functions.hpp
include/turing_forge/interpreter/backend/blaze/: derivatives.hpp  functions.hpp
include/turing_forge/interpreter/backend/eigen/: derivatives.hpp  functions.hpp
include/turing_forge/interpreter/backend/eve/: derivatives.hpp  functions.hpp
include/turing_forge/interpreter/backend/fast_approx/: derivatives.hpp  functions.hpp
include/turing_forge/interpreter/backend/fast_approx/impl/: aq.hpp  exp.hpp  inv.hpp  log.hpp  pow.hpp  sqrt.hpp  tanh.hpp  trig.hpp
include/turing_forge/interpreter/backend/fastor/: derivatives.hpp  functions.hpp
include/turing_forge/interpreter/backend/plain/: derivatives.hpp  functions.hpp
include/turing_forge/interpreter/backend/vdt/: derivatives.hpp  functions.hpp
include/turing_forge/mdspan/: mdspan.hpp
include/turing_forge/operators/: creator.hpp  crossover.hpp  evaluator.hpp  generator.hpp  initializer.hpp  local_search.hpp  mutation.hpp  non_dominated_sorter.hpp  reinserter.hpp  selector.hpp
include/turing_forge/optimizer/: config.hpp  dynamic_cost_function.hpp  lm_cost_function.hpp  optimizer.hpp  simulated_annealing.hpp  tiny_cost_function.hpp
include/turing_forge/optimizer/likelihood/: gaussian_likelihood.hpp  likelihood_base.hpp  poisson_likelihood.hpp
include/turing_forge/optimizer/solvers/: sgd.hpp
include/turing_forge/random/: random.hpp  romu.hpp
include/turingforge/: AdaptiveParsimony.h  CheckConstraints.h  Complexity.h  Configure.h  ConstantOptimization.h  Constants.h  Dataset.h  HallOfFame.h  Migration.h  Mutate.h  MutationFunctions.h  OperatorEnum.h  Operators.h  Optim.h  Options.h  OptionsStructure.h  Population.h  PopulationMember.h  Recorder.h  RegularizedEvolution.h  SearchUtils.h  SingleIteration.h  Utils.h
include/turingforge/Loss/: Distance.h  LossFunctions.h  Margin.h  Other.h  Scaled.h  Traits.h  Utils.h  Weighted.h
include/vstat/: bivariate.hpp  combine.hpp  univariate.hpp  util.hpp  vstat.hpp
lib/: CMakeLists.txt
src/: CMakeLists.txt
src/algorithms/: gp.cpp  nsga2.cpp  sa.cpp  solution_archive.cpp
src/core/: CMakeLists.txt  dataset.cpp  distance.cpp  node.cpp  primitive_set.cpp  version.cpp
src/formatter/: individual.cpp
src/hash/: hash.cpp  metrohash64.cpp
src/operators/: crossover.cpp  evaluator.cpp  evaluator_error_metrics.cpp  local_search.cpp  mutation.cpp
src/operators/creators/: balanced.cpp
src/operators/generator/: basic.cpp  brood.cpp  os.cpp  poly.cpp
src/operators/non_dominated_sorter/: best_order_sort.cpp  deductive_sort.cpp  dominance_degree_sort.cpp  efficient_sort.cpp  hierarchical_sort.cpp  merge_sort.cpp  rank_intersect.cpp  rank_ordinal.cpp
src/operators/selector/: proportional.cpp  tournament.cpp
src/optimizer/: CMakeLists.txt  simulated_annealing.cpp
test/: CMakeLists.txt
test/Loss/: CMakeLists.txt  core.cpp  properties.cpp
tests/: CMakeLists.txt  test_crossover.cpp  test_dispatch_table.cpp  test_error_metrics.cpp  test_evaluation.cpp  test_expression.cpp  test_individual.cpp  test_initialization.cpp  test_mutation.cpp  test_nondominantsort.cpp  test_regression.cpp  test_selection.cpp  test_simulated_annealing.cpp  turingforge_test.hpp
